delivery/kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  rules:
    - host: my-portfolio.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nginx-service
                port:
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: api-express-service
                port:
                  number: 4000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-express-service
                port:
                  number: 4000
